src/test/deca/context/invalid/test12_assign.deca
// Description:
//    Programme testant une mauvaise affectation.
//	  Etape(s) : A, B et C
// 	  Lexicalement : OUI
//	  Syntaxiquement : OUI
//	  Contextuellement : NON
//
// Resultats:
//	  test_context : erreur ligne 17 : RValue's type 
//    is not compatible with the expected type
//
// Historique:
//    cree le 09/01/2020

{
	int a = 3.5;
}